--- a/html/index.html
+++ b/html/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title style="text-align:center ;">Document</title>
 </head>
 <body>
   <p>나이계산</p>
-  <script src="../javascript/상근날드.js"></script>
+  <script src="../javascript/타이머콜백.js"></script>
+  <button id="myButton">내가만든버튼</button>
 </body>
 </html>
